--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<embed src="example.pdf" width="500" height="700" type="application/pdf">
+<embed src="CV.pdf" width="500" height="700" type="application/pdf">
 
 </body>
 
