--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-  <title>Haodong Zou (邹浩东)</title>
   
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Haodong Zou (邹浩东)</title>
   <meta name="author" content="Haodong Zou">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
 </head>
 
 <body>
