--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  
+<!DOCTYPE html>
+<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Haodong Zou (邹浩东)</title>
-  <meta name="author" content="Haodong Zou">
+    <title>PDF Embed Example</title>
 </head>
-
 <body>
 <embed src="CV.pdf" width="100%" height="100%" type="application/pdf">
 </body>
