--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>PDF Embed Example</title>
 </head>
 <body>
-<embed src="CV.pdf" width="100%" height="100%" type="application/pdf">
+<div style="width: 100%; height: 100vh;">
+        <iframe src="CV.pdf" width="100%" height="100%" frameborder="0"></iframe>
+</div>
 </body>
 
 </html>
