--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF Embed Example</title>
+    <title>Homepage</title>
 </head>
 <body>
-<div style="width: 100%; height: 100vh;">
+<div style="width: 100%; height: 100%;">
         <iframe src="CV.pdf" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 </body>
