--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
     <title>Homepage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        #pdf-container {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-<div style="width: 100%; height: 100%;">
-        <iframe src="CV.pdf" width="100%" height="100%" frameborder="0"></iframe>
-</div>
+    <div id="pdf-container">
+        <iframe src="CV.pdf" width="100%" height="100%"></iframe>
+    </div>
 </body>
-
 </html>
